# zmet

./: .gitignore  README.md  pyproject.toml  requirements.txt
zmet/: __init__.py  access.py  add.py  aes_page.py  auth.py  config.py  crypto.py  egg.py  graph.py  graph_api.py  group.py  img.py  kahns_algorith.py  keep.py  label.py  links.py  ordering.py  page.py  redirection.py  saltpack_armor.py  search.py  shortlink.py  wall.py  zmet_lang.py
zmet/auth/: auth.py  user.py
zmet/scripts/: __init__.py  calendar.py  mosaic.py  refs.py  sync.py
zmet/templates/: add_note.html  aes_page.html  base.html  graph_explorer.html  page.html  simple_table.html  wall.html
zmet/view/: view.py
zmet/view/templates/: wall.html
